src/examples/type_errors/Functions.sol
pragma solidity ^0.5.0;

contract Functions {

	address owner;

    function f(uint@owner x) {
    }

}
